--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         
       </div>
       <div class="home-content">
-        <h1>Meu nome é <span>Breno</span></h1>
-        <h3 class="typing-text">Eu sou <span></span></h3>
+        <h1>Prazer,</h1>
+        <h3 class="Name">Meu nome é <span>Breno</span></h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quae inventore soluta voluptas magnam nam explicabo omnis natus pariatur consectetur doloremque minima blanditiis ducimus eum consequatur, assumenda facere at labore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut optio atque doloremque beatae ab mollitia voluptates molestiae tempora natus! Culpa repudiandae qui dolore expedita reprehenderit id! Ex quis provident temporibus!
         </p>
@@ -50,28 +50,33 @@
           <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
-        <a class="btn" href="#">Me contrate porfavor!</a>
+        <a class="btn" href="#">Contate-me</a>
       </div>
     </section>
     <SEction id="servicos" class="blocos">
       <h3>Serviços</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis, quo doloribus assumenda, maxime tenetur enim aspernatur est, dignissimos incidunt omnis accusantium? Molestiae ipsa rerum nam dicta, sint vitae.</p>
     </SEction>
-    <SEction id="habilidades" class="blocos">
+    <section id="habilidades" class="blocos">
       <h3>Habilidades</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis, quo doloribus assumenda, maxime tenetur enim aspernatur est, dignissimos incidunt omnis accusantium? Molestiae ipsa rerum nam dicta, sint vitae.</p>
-    </SEction>
-    <SEction id="formacao" class="blocos">
+      <div class="skill-icons">
+          <a href="#"><i class="fa-brands fa-java"></i></a>
+          <a href="#"><i class="fa-brands fa-html5"></i></a>
+          <a href="#"><i class="fa-brands fa-python"></i></a>
+          <a href="#"><i class="fa-brands fa-react"></i></a>
+      </div>
+    </section>
+    <section id="formacao" class="blocos">
       <h3>Formação</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis, quo doloribus assumenda, maxime tenetur enim aspernatur est, dignissimos incidunt omnis accusantium? Molestiae ipsa rerum nam dicta, sint vitae.</p>
-    </SEction>
-    <SEction id="experiencia" class="blocos">
+    </section>
+    <section id="experiencia" class="blocos">
       <h3>Experiência</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis, quo doloribus assumenda, maxime tenetur enim aspernatur est, dignissimos incidunt omnis accusantium? Molestiae ipsa rerum nam dicta, sint vitae.</p>
-    </SEction>
-    <SEction id="contatos" class="blocos">
+    </section>
+    <section id="contatos" class="blocos">
       <h3>Contatos</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis, quo doloribus assumenda, maxime tenetur enim aspernatur est, dignissimos incidunt omnis accusantium? Molestiae ipsa rerum nam dicta, sint vitae.</p>
-    </SEction>
+    </section>
   </body>
 </html>
